force-app/main/default/objects/Clinical_Skill__c/Clinical_Skill__c.object-meta.xml
<CustomObject>
    <label>Clinical Skill</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>