force-app/main/default/objects/Clinical_Skill__c/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Verified Date</label>
    <type>Date</type>
</CustomField>