force-app/main/default/objects/Clinical_Skill__c/fields/Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Verification_Method__c</fullName>
    <label>Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Supervisor Validation</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Training Completion</fullName>
            </value>
            <value>
                <fullName>Self-Declared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>